feat(day11-13): added level up and reset feautures

--- a/day11-13/character.html
+++ b/day11-13/character.html
@@ -99,6 +99,7 @@
       button:active {
         width: 130px;
       }
+      #btn{display: none;}
     </style>
   </head>
   <body>
@@ -108,7 +109,8 @@
         <div class="text-container">
           <h1></h1>
           <h4></h4>
-          <button>Level Up</button>
+          <button id="level">Level Up</button>
+          <button id="btn">Base form</button>
         </div>
       </div>
     </div>
