feat(day14-15): i arranged my directory and created a simple tally counter

--- a/result-checker/score.html
+++ b/result-checker/score.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <a href="../index.html"><button class="btn">Go Back</button></a>
     <div class="score-container">
       <form id="root">
         <h1>Check Result</h1>
