--- a/day11-13/character.html
+++ b/day11-13/character.html
@@ -20,6 +20,24 @@
         font-weight: 600;
         font-family: sans-serif;
       }
+      .btn {
+        color: white;
+        position: absolute;
+        background: black;
+        padding: 10px 20px;
+        border-radius: 5px;
+        top: 10px;
+        left: 10px;
+        border: none;
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-weight: 800;
+      }
+      .btn:hover {
+        background: rgb(92, 148, 173);
+        color: black;
+      }
       .profile-container {
         width: 100%;
         height: 100%;
@@ -103,6 +121,7 @@
     </style>
   </head>
   <body>
+    <a href="../index.html"><button class="btn">Go Back</button></a>
     <div class="profile-container">
       <div class="profile">
         <img src="assets/lvl1.jpeg" alt="" />
