feat(day14-15): fixed the index.html urls

--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
     <div class="container">
       <div class="projects">
         <h2>My Projects</h2>
-        <button><a href="/result-checker/score.html" target="_blank">Result Checker</a></button>
-        <button><a href="/day11-13/character.html" target="_blank">Aizen Character Leveling</a></button>
-        <button><a href="/counter-app/counter.html" target="_blank">Aizen's Counter</a></button>
-        <button><a href="project4.html" target="_blank">Project 4</a></button>
-        <button><a href="project5.html" target="_blank">Project 5</a></button>
+        <button><a href="/result-checker/score.html">Result Checker</a></button>
+        <button>
+          <a href="/day11-13/character.html">Aizen Character Leveling</a>
+        </button>
+        <button><a href="/counter-app/counter.html">Aizen's Counter</a></button>
+        <button><a href="">Project 4</a></button>
+        <button><a href="">Project 5</a></button>
       </div>
     </div>
   </body>
