--- a/counter-app/counter.html
+++ b/counter-app/counter.html
@@ -110,7 +110,7 @@
     <h1>Aizen's Counter</h1>
     <div class="container">
       <div class="counter">
-        <p id="count"></p>
+        <p id="count">0</p>
       </div>
     </div>
     <div class="buttons">
