fixed dir for my projects link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="/day11-13/character.html">Aizen Character Leveling</a>
         </button>
         <button><a href="/counter-app/counter.html">Aizen's Counter</a></button>
-        <button><a href="">Project 4</a></button>
+        <button><a href="quiz/quiz.html">Anime Quizz</a></button>
         <button><a href="">Project 5</a></button>
       </div>
     </div>
